hphp/hack/test/typecheck/like_types/dynamic_coercion/lambda_declared.php.exp
File "lambda_declared.php", line 10, characters 6-7:
Invalid argument (Typing[4110])
File "lambda_declared.php", line 7, characters 9-11:
This is an int
File "lambda_declared.php", line 4, characters 12-18:
It is incompatible with a dynamic value
File "lambda_declared.php", line 15, characters 12-13:
Invalid return type (Typing[4110])
File "lambda_declared.php", line 14, characters 28-40:
This is a tuple of size 2
File "lambda_declared.php", line 13, characters 12-18:
It is incompatible with a dynamic value
File "lambda_declared.php", line 17, characters 6-7:
Invalid argument (Typing[4110])
File "lambda_declared.php", line 14, characters 9-21:
This is a tuple of size 2
File "lambda_declared.php", line 13, characters 12-18:
It is incompatible with a dynamic value
